added makefile and starting script

--- a/simulation/Makefile
+++ b/simulation/Makefile
@@ -1,7 +1,7 @@
-build:
+build: ap/ap.go mitm/mitm.go client/client.go
 	go build -o ap/ap ap/ap.go
 	go build -o mitm/mitm mitm/mitm.go
 	go build -o client/client client/client.go
 
-clean:
-	rm -f ap/ap mitm/mitm client/client
+clean: ap/ap mitm/mitm client/client
+	rm ap/ap mitm/mitm client/client
